recursion.lessons.recursion.dragoncurve.DragonCurve1.scala.code
def dragon(order:Int, x:Double, y:Double, z:Double, t:Double) {
		if (order==1) (allerVers(z,t))
		else {	var u = (x + z)/2 + (t - y)/2
				var v = (y + t)/2 - (z - x)/2
				
			dragon(x,y,u,v)
			dragon(z,t,u,v)
				
				
				
				
				
				
				}


}
